--- a/rottenpotatoes/app/views/movies/index.html.haml
+++ b/rottenpotatoes/app/views/movies/index.html.haml
@@ -1,7 +1,4 @@
 -#  This file is app/views/movies/index.html.haml
-%p= flash[:alert] if flash[:alert]
- = link_to 'Home', root_path
-
 %h2 All Movies
 
 = form_tag movies_path, :method => :get, :id => 'ratings_form' do
@@ -19,6 +16,7 @@
       %th{:class => @title_header}= link_to 'Movie Title', movies_path(:sort => 'title', :ratings => @selected_ratings), :id => 'title_header'
       %th Rating
       %th{:class => @date_header}= link_to 'Release Date', movies_path(:sort => 'release_date', :ratings => @selected_ratings), :id => 'release_date_header'
+      %th Director
       %th More Info
   %tbody
     - @movies.each do |movie|
@@ -26,6 +24,7 @@
         %td= movie.title
         %td= movie.rating
         %td= movie.release_date
+        %td= movie.director
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
